llvm/test/tools/llubi/store_dead.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
  %alloc = alloca i32
  call void @llvm.lifetime.start.p0(ptr %alloc)
  store i32 0, ptr %alloc
  call void @llvm.lifetime.end.p0(ptr %alloc)
  store i32 0, ptr %alloc
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %alloc = alloca i32, align 4 => ptr 0x8 [alloc]
; CHECK-NEXT:   call void @llvm.lifetime.start.p0(ptr %alloc)
; CHECK-NEXT:   store i32 0, ptr %alloc, align 4
; CHECK-NEXT:   call void @llvm.lifetime.end.p0(ptr %alloc)
; CHECK-NEXT: Immediate UB detected: Try to access a dead memory object.
; CHECK-NEXT: error: Execution of function 'main' failed.
